qbt/bazarr-endpointslice.yaml
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: bazarr
  labels:
    kubernetes.io/service-name: bazarr
addressType: IPv4
ports:
  - name: http
    port: 6767
    protocol: TCP
endpoints:
  - addresses:
      - 192.168.1.100
    conditions:
      ready: true
