qbt/metube-endpointslice.yaml
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: metube
  labels:
    kubernetes.io/service-name: metube
addressType: IPv4
ports:
  - name: http
    port: 8090
    protocol: TCP
endpoints:
  - addresses:
      - 192.168.1.100
    conditions:
      ready: true
