qbt/metube-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: metube
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8090
      targetPort: 8090
