qbt/nzb-endpointslice.yaml
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: nzb
  labels:
    kubernetes.io/service-name: nzb
addressType: IPv4
ports:
  - name: http
    port: 6789
    protocol: TCP
endpoints:
  - addresses:
      - 192.168.1.100
    conditions:
      ready: true
