qbt/nzb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nzb
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 6789
      targetPort: 6789
