qbt/qbt-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: qbt
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 9050
      targetPort: 9050
