qbt/radarr-endpointslice.yaml
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: radarr
  labels:
    kubernetes.io/service-name: radarr
addressType: IPv4
ports:
  - name: http
    port: 7878
    protocol: TCP
endpoints:
  - addresses:
      - 192.168.1.100
    conditions:
      ready: true
