qbt/radarr-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: radarr
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 7878
      targetPort: 7878
