qbt/sonarr-endpointslice.yaml
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: sonarr
  labels:
    kubernetes.io/service-name: sonarr
addressType: IPv4
ports:
  - name: http
    port: 8989
    protocol: TCP
endpoints:
  - addresses:
      - 192.168.1.100
    conditions:
      ready: true
