qbt/sonarr-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonarr
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8989
      targetPort: 8989
