qbt/metube-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: metube
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-dns
    traefik.ingress.kubernetes.io/router.middlewares: kube-system-https-redirect@kubernetescrd
spec:
  tls:
    - hosts:
        - metube.home.jutonz.com
      secretName: metube-tls
  rules:
    - host: metube.home.jutonz.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: metube
                port:
                  number: 8090
