qbt/nzb-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nzb
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-dns
    traefik.ingress.kubernetes.io/router.middlewares: kube-system-https-redirect@kubernetescrd
spec:
  tls:
    - hosts:
        - nzb.home.jutonz.com
      secretName: nzb-tls
  rules:
    - host: nzb.home.jutonz.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nzb
                port:
                  number: 6789
