qbt/qbt-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: qbt
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-dns
    traefik.ingress.kubernetes.io/router.middlewares: kube-system-https-redirect@kubernetescrd
spec:
  tls:
    - hosts:
        - qbt.home.jutonz.com
      secretName: qbt-tls
  rules:
    - host: qbt.home.jutonz.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: qbt
                port:
                  number: 9050
